- 
    Bug 
- 
    Resolution: Fixed
- 
    P2: Important 
- 
    5.12.6
- 
    None
- 
    Windows 10
- 
        I9a7e98c0cb08b2399b7928ecf026c0deb90a1bcb
I have an HTML page with audio element that I open in Qt WebEngine. When the page and the audio file are loaded from disk ("file:///index.html"), everything is OK. When they are added to resources and loaded from there ("index.html" or "qrc:/index.html"), audio abruptly ends in a matter of seconds. Adding preload attribute to the audio element gives it a bit more time to play, but it doesn't finish nonetheless. The audio file is in OGG format, tried different files. Minimal reproducible example is attached.
| For Gerrit Dashboard: QTBUG-80234 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 285837,3 | Support Range headers in custom URLRequestJobs | 5.14 | qt/qtwebengine | Status: MERGED | +2 | 0 |