Support Range headers in custom URLRequestJobs

This is essential when Chromium tries to load media files in multiple jobs
over custom protocols, like qrc. Allow subsequent jobs to continue reading
media files from specified positions to avoid media glitches and errors.

Task-number: QTBUG-80234
Change-Id: I9a7e98c0cb08b2399b7928ecf026c0deb90a1bcb
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>